unpackaged/objects/Case.object
<CustomObject>
    <fields>
        <fullName>InsuranceItem__c</fullName>
        <label>保険種目</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>財産保険</fullName>
                </value>
                <value>
                    <fullName>財産一切保険</fullName>
                </value>
                <value>
                    <fullName>機械保険</fullName>
                </value>
                <value>
                    <fullName>現金保険</fullName>
                </value>
                <value>
                    <fullName>コンピューター保険</fullName>
                </value>
                <value>
                    <fullName>建設工事／組立工事保険</fullName>
                </value>
                <value>
                    <fullName>団体意外傷害保険</fullName>
                </value>
                <value>
                    <fullName>海外旅行総合保険</fullName>
                </value>
                <value>
                    <fullName>公衆責任保険</fullName>
                </value>
                <value>
                    <fullName>生産物賠償責任保険</fullName>
                </value>
                <value>
                    <fullName>雇主責任保険</fullName>
                </value>
                <value>
                    <fullName>利益保険</fullName>
                </value>
                <value>
                    <fullName>機械利益保険</fullName>
                </value>
                <value>
                    <fullName>陸上・海上・航空貨物運送保険</fullName>
                </value>
                <value>
                    <fullName>ゴルファー保険</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
                <value>
                    <fullName>オフィスパッケージ</fullName>
                </value>
                <value>
                    <fullName>団体傷害/医療保険</fullName>
                </value>
                <value>
                    <fullName>雇主工傷</fullName>
                </value>
                <value>
                    <fullName>PL保険</fullName>
                </value>
                <value>
                    <fullName>物流</fullName>
                </value>
                <value>
                    <fullName>運送賠償</fullName>
                </value>
                <value>
                    <fullName>住宅総合</fullName>
                </value>
                <value>
                    <fullName>建設工事保険</fullName>
                </value>
                <value>
                    <fullName>逆OTA</fullName>
                </value>
                <value>
                    <fullName>OTA（香港）</fullName>
                </value>
                <value>
                    <fullName>自動車保険（香港）</fullName>
                </value>
                <value>
                    <fullName>操業停止損害保険（香港）</fullName>
                </value>
                <value>
                    <fullName>搭乗者傷害保険（香港）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsuranceKind__c</fullName>
        <label>保険種類</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurant__c</fullName>
        <formula>BlNo__r.Insurant__r.Name</formula>
        <label>被保険者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuKeitai__c</fullName>
        <label>契約形態</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuMan__c</fullName>
        <label>契約者（被保険者）</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_CompanyName__c</fullName>
        <label>(M)Company Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Contact_Email__c</fullName>
        <label>(M)Contact(Email)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>M_Contact_Mobile__c</fullName>
        <label>(M)Contact(Mobile)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>M_Contact_Name__c</fullName>
        <label>(M)Contact(Name)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Contact_Tel__c</fullName>
        <label>(M)Contact(Tel)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>M_DamageFirstFoundAtDate__c</fullName>
        <label>(M)Damage first found at date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M_DamageFirstFoundAtPlace__c</fullName>
        <label>(M)Damage first found at place</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_FinalDestination_Craft__c</fullName>
        <label>(M)Final Destination(Craft)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_FinalDestination_Place__c</fullName>
        <label>(M)Final Destination(Place)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_FinalDestination_Time__c</fullName>
        <label>(M)Final Destination(Time)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_From_Craft__c</fullName>
        <label>(M)From(Craft)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_From_Place__c</fullName>
        <label>(M)From(Place)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_From_Time__c</fullName>
        <label>(M)From(Time)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_KindOfDamage_Others__c</fullName>
        <label>(M)Kind of damage(Others)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_KindOfDamage__c</fullName>
        <label>(M)Kind of damage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breakage</fullName>
                </value>
                <value>
                    <fullName>Shortage</fullName>
                </value>
                <value>
                    <fullName>Wet</fullName>
                </value>
                <value>
                    <fullName>Deformed</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>M_NatureOfTheGoods__c</fullName>
        <label>(M)Nature of the goods</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Notes__c</fullName>
        <label>(M)Notes</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_PortOfDistination_Craft__c</fullName>
        <label>(M)Port of Destination(Craft)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_PortOfDistination_Place__c</fullName>
        <label>(M)Port of Destination(Place)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_PortOfDistination_Time__c</fullName>
        <label>(M)Port of Destination(Time)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_PortOfLoading_Craft__c</fullName>
        <label>(M)Port of Loading(Craft)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_PortOfLoading_Place__c</fullName>
        <label>(M)Port of Loading(Place)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_PortOfLoading_Time__c</fullName>
        <label>(M)Port of Loading(Time)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_RequestedByClients__c</fullName>
        <label>(M)Requested by Clients</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_Status__c</fullName>
        <label>(M)Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consignee</fullName>
                </value>
                <value>
                    <fullName>Insured</fullName>
                </value>
                <value>
                    <fullName>Shipper</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>M_TheAmountOfDamaged__c</fullName>
        <label>(M)The amount of damaged</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_TheNumberOfDamaged__c</fullName>
        <label>(M)The number of damaged</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_ThePlaceOfStorageAtPresent__c</fullName>
        <label>(M)The place of storage at present</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_WeRequestClientsToSend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(M)We request clients to send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M_WeRequestClientsToSend_txt__c</fullName>
        <formula>IF ( M_WeRequestClientsToSend__c  = True, &quot;已依赖&quot;, &quot;未依赖&quot;)</formula>
        <label>(M)We request clients to send_txt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatterDetail__c</fullName>
        <label>事案概要</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>本省からの緊急連絡</fullName>
                </value>
                <value>
                    <fullName>VIPからの緊急連絡</fullName>
                </value>
                <value>
                    <fullName>報道関係者からの事実確認</fullName>
                </value>
                <value>
                    <fullName>大規模事件・事故の通報</fullName>
                </value>
                <value>
                    <fullName>大規模災害の通報</fullName>
                </value>
                <value>
                    <fullName>邦人の逮捕・拘留</fullName>
                </value>
                <value>
                    <fullName>邦人の保護</fullName>
                </value>
                <value>
                    <fullName>査証の緊急発給</fullName>
                </value>
                <value>
                    <fullName>旅券の緊急発給</fullName>
                </value>
                <value>
                    <fullName>邦人の死亡</fullName>
                </value>
                <value>
                    <fullName>邦人の疾病</fullName>
                </value>
                <value>
                    <fullName>邦人の負傷</fullName>
                </value>
                <value>
                    <fullName>精神障害</fullName>
                </value>
                <value>
                    <fullName>行方不明</fullName>
                </value>
                <value>
                    <fullName>上記以外の邦人関与の事件・事故</fullName>
                </value>
                <value>
                    <fullName>困窮邦人</fullName>
                </value>
                <value>
                    <fullName>拾得物</fullName>
                </value>
                <value>
                    <fullName>旅券の盗難</fullName>
                </value>
                <value>
                    <fullName>旅券の紛失</fullName>
                </value>
                <value>
                    <fullName>出入国トラブル</fullName>
                </value>
                <value>
                    <fullName>民事トラブル相談</fullName>
                </value>
                <value>
                    <fullName>領事手続き</fullName>
                </value>
                <value>
                    <fullName>中国査証</fullName>
                </value>
                <value>
                    <fullName>インド査証</fullName>
                </value>
                <value>
                    <fullName>日本査証</fullName>
                </value>
                <value>
                    <fullName>大使館への苦情</fullName>
                </value>
                <value>
                    <fullName>各種照会</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MatterKubun__c</fullName>
        <label>事案区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>緊急事案</fullName>
                </value>
                <value>
                    <fullName>一般事案</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MedicalCareDepartment__c</fullName>
        <label>診療科目</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>内科</fullName>
                </value>
                <value>
                    <fullName>外科</fullName>
                </value>
                <value>
                    <fullName>整形外科</fullName>
                </value>
                <value>
                    <fullName>脳神経外科</fullName>
                </value>
                <value>
                    <fullName>小児科</fullName>
                </value>
                <value>
                    <fullName>産婦人科</fullName>
                </value>
                <value>
                    <fullName>眼科</fullName>
                </value>
                <value>
                    <fullName>耳鼻咽喉科</fullName>
                </value>
                <value>
                    <fullName>皮膚科</fullName>
                </value>
                <value>
                    <fullName>泌尿器科</fullName>
                </value>
                <value>
                    <fullName>歯科</fullName>
                </value>
                <value>
                    <fullName>心療内科</fullName>
                </value>
                <value>
                    <fullName>中医</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MemberDetail__c</fullName>
        <label>会員詳細</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>会員（本人）</fullName>
                </value>
                <value>
                    <fullName>会員（家族）</fullName>
                </value>
                <value>
                    <fullName>会員（出張者）</fullName>
                </value>
                <value>
                    <fullName>包括会員</fullName>
                </value>
                <value>
                    <fullName>非会員</fullName>
                </value>
                <value>
                    <fullName>退会者</fullName>
                </value>
                <value>
                    <fullName>ISI</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MemberFamilyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>会員または会員（家族）のどちらか一方を入力して下さい。</inlineHelpText>
        <label>会員（家族）名称</label>
        <referenceTo>FamilyInfo__c</referenceTo>
        <relationshipLabel>AC受付内容</relationshipLabel>
        <relationshipName>R00N10000000HaEOEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MemberKubun__c</fullName>
        <label>会員区分</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberMeiKana__c</fullName>
        <label>会員名（カナ）</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>会員または会員（家族）のどちらか一方を入力して下さい。</inlineHelpText>
        <label>会員名称</label>
        <referenceTo>MemberInfo__c</referenceTo>
        <relationshipLabel>AC受付内容</relationshipLabel>
        <relationshipName>R00N10000000HUrdEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MemberNo__c</fullName>
        <label>会員番号</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberSeiKana__c</fullName>
        <label>会員姓（カナ）</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>携帯TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MofaAdd__c</fullName>
        <label>住所</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MofaDateOfBirth__c</fullName>
        <label>(領事館用)生年月日</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MofaEnterDate__c</fullName>
        <label>入国日付</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MofaHasseiPlace__c</fullName>
        <label>発生場所</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MofaPassportNo__c</fullName>
        <label>旅券番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>備考</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberPlate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>一路平安（登録番号）</label>
        <referenceTo>Ichiroheian__c</referenceTo>
        <relationshipLabel>ケース</relationshipLabel>
        <relationshipName>R00N10000000ZjH8EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtaAgency__c</fullName>
        <label>取扱</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WB扱い</fullName>
                </value>
                <value>
                    <fullName>WB以外</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtaKikanFrom__c</fullName>
        <label>保険期間(From)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OtaKikanTo__c</fullName>
        <label>保険期間(To)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OtaName__c</fullName>
        <label>OTA保険会社名称</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>株式会社損害保険ジャパン</fullName>
                </value>
                <value>
                    <fullName>株式会社損害保険ジャパン  大連</fullName>
                </value>
                <value>
                    <fullName>株式会社損害保険ジャパン　香港支店</fullName>
                </value>
                <value>
                    <fullName>JI傷害火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>ニッセイ同和損害保険株式会社(JI)</fullName>
                </value>
                <value>
                    <fullName>あいおいニッセイ同和損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>富士火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>朝日火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>ソニー損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>中国人民保険</fullName>
                </value>
                <value>
                    <fullName>長生人寿保険有限公司</fullName>
                </value>
                <value>
                    <fullName>カード付帯</fullName>
                </value>
                <value>
                    <fullName>日立 Health Care Program</fullName>
                </value>
                <value>
                    <fullName>三菱東京UFJ Health Care Program</fullName>
                </value>
                <value>
                    <fullName>エース損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>日本興亜損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>あいおい損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>ニッセイ同和損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>LIBERTY</fullName>
                </value>
                <value>
                    <fullName>QBE</fullName>
                </value>
                <value>
                    <fullName>アリアンツ火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>チューリッヒ保険会社</fullName>
                </value>
                <value>
                    <fullName>ロイヤルサンアライアンス保険会社</fullName>
                </value>
                <value>
                    <fullName>東京海上火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>東京海上日動火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>東京海上火災保険（香港）有限公司</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災保険（香港)有限公司</fullName>
                </value>
                <value>
                    <fullName>AIU保険会社</fullName>
                </value>
                <value>
                    <fullName>安田火災海上保険株式会社</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtaNote__c</fullName>
        <label>OTA備考</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherHospital__c</fullName>
        <inlineHelpText>病院名称が
「その他非提携」の場合に、
入力します。</inlineHelpText>
        <label>その他病院名称</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherMemberNo__c</fullName>
        <inlineHelpText>「ISI国際学院」、「地球びと」専用の
会員番号が表示されます。</inlineHelpText>
        <label>その他会員番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayHouhouSituation__c</fullName>
        <label>支払方法状況</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>証券持参</fullName>
                </value>
                <value>
                    <fullName>カード付帯OTA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PeymentMethod__c</fullName>
        <inlineHelpText>CMSは、キャッシュレスです。</inlineHelpText>
        <label>医療費支払方法</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>現金</fullName>
                </value>
                <value>
                    <fullName>カード付帯OTA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuestionGengo__c</fullName>
        <label>問合せ言語</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>日本語</fullName>
                </value>
                <value>
                    <fullName>中国語</fullName>
                </value>
                <value>
                    <fullName>英語</fullName>
                </value>
                <value>
                    <fullName>韓国語</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuestionNaiyo__c</fullName>
        <label>問合せ内容</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReceiptLine__c</fullName>
        <label>受付ライン</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>アラームセンター</fullName>
                </value>
                <value>
                    <fullName>ハノイアラーム</fullName>
                </value>
                <value>
                    <fullName>グリ-ンクリニック</fullName>
                </value>
                <value>
                    <fullName>ANAカード</fullName>
                </value>
                <value>
                    <fullName>長生人寿</fullName>
                </value>
                <value>
                    <fullName>AXA</fullName>
                </value>
                <value>
                    <fullName>上海メンタル診察室</fullName>
                </value>
                <value>
                    <fullName>SJ上海</fullName>
                </value>
                <value>
                    <fullName>ジェイアイ</fullName>
                </value>
                <value>
                    <fullName>SJ中国</fullName>
                </value>
                <value>
                    <fullName>平安VIP</fullName>
                </value>
                <value>
                    <fullName>富通VIP</fullName>
                </value>
                <value>
                    <fullName>在中国日本大使館</fullName>
                </value>
                <value>
                    <fullName>上海領事館</fullName>
                </value>
                <value>
                    <fullName>瀋陽領事館</fullName>
                </value>
                <value>
                    <fullName>大連出張駐在官事務所</fullName>
                </value>
                <value>
                    <fullName>重慶領事館</fullName>
                </value>
                <value>
                    <fullName>広州領事館</fullName>
                </value>
                <value>
                    <fullName>香港領事館</fullName>
                </value>
                <value>
                    <fullName>青島領事館</fullName>
                </value>
                <value>
                    <fullName>三井住友</fullName>
                </value>
                <value>
                    <fullName>メディックBL</fullName>
                </value>
                <value>
                    <fullName>三井マリン</fullName>
                </value>
                <value>
                    <fullName>陽光人寿</fullName>
                </value>
                <value>
                    <fullName>健康相談</fullName>
                </value>
                <value>
                    <fullName>在インド大使館</fullName>
                </value>
                <value>
                    <fullName>在コルカタ総領事館</fullName>
                </value>
                <value>
                    <fullName>在チェンナイ総領事館</fullName>
                </value>
                <value>
                    <fullName>在ムンバイ総領事館</fullName>
                </value>
                <value>
                    <fullName>在バンガロール出張駐在官事務所</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReceiptTimeText__c</fullName>
        <formula>TEXT(floor(  UketsukeTime__c))   &amp; &quot;:&quot; &amp;   IF( MOD(UketsukeTime__c,2) &lt;= 0.09, &quot;0&quot;&amp;RIGHT(TEXT( MOD(UketsukeTime__c,2) * 100)  , 2), RIGHT(TEXT( MOD(UketsukeTime__c,2) * 100)  , 2) ) &amp; &quot;:00&quot;</formula>
        <label>受付時間（テキスト）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt__c</fullName>
        <label>受付者</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>葉鸞丹</fullName>
                </value>
                <value>
                    <fullName>桧室ゆかり</fullName>
                </value>
                <value>
                    <fullName>林光子</fullName>
                </value>
                <value>
                    <fullName>小林由香</fullName>
                </value>
                <value>
                    <fullName>羅智子</fullName>
                </value>
                <value>
                    <fullName>武石真弥</fullName>
                </value>
                <value>
                    <fullName>崔賢</fullName>
                </value>
                <value>
                    <fullName>侯婭</fullName>
                </value>
                <value>
                    <fullName>潘辰</fullName>
                </value>
                <value>
                    <fullName>徐海芬</fullName>
                </value>
                <value>
                    <fullName>王翔</fullName>
                </value>
                <value>
                    <fullName>兒玉あさみ</fullName>
                </value>
                <value>
                    <fullName>人見友佳子</fullName>
                </value>
                <value>
                    <fullName>岑希</fullName>
                </value>
                <value>
                    <fullName>鈴木純子</fullName>
                </value>
                <value>
                    <fullName>蒋曉聞</fullName>
                </value>
                <value>
                    <fullName>張芸</fullName>
                </value>
                <value>
                    <fullName>謝建芳</fullName>
                </value>
                <value>
                    <fullName>方君</fullName>
                </value>
                <value>
                    <fullName>下田佳織</fullName>
                </value>
                <value>
                    <fullName>嘉山美央</fullName>
                </value>
                <value>
                    <fullName>ACguest</fullName>
                </value>
                <value>
                    <fullName>Dung</fullName>
                </value>
                <value>
                    <fullName>Hao</fullName>
                </value>
                <value>
                    <fullName>Stefani</fullName>
                </value>
                <value>
                    <fullName>Rebecca</fullName>
                </value>
                <value>
                    <fullName>Judy</fullName>
                </value>
                <value>
                    <fullName>網代由紀子</fullName>
                </value>
                <value>
                    <fullName>瀧澤あかり</fullName>
                </value>
                <value>
                    <fullName>山口真由美</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordFolder__c</fullName>
        <label>録音フォルダ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>003</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>009</fullName>
                </value>
                <value>
                    <fullName>010</fullName>
                </value>
                <value>
                    <fullName>011</fullName>
                </value>
                <value>
                    <fullName>012</fullName>
                </value>
                <value>
                    <fullName>013</fullName>
                </value>
                <value>
                    <fullName>014</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>019</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>